syntax = "proto3";

package analytics;

enum Level {
  ERROR = 0;
  WARN = 1;
  INFO = 2;
  DEBUG = 3;
  TRACE = 4;
}

message LogEntry {
  Level level = 1;
  double time_ms = 2;
  string target = 3;
  string msg = 4;
}